# Jacob_Ladder

./: .gitignore  jacob_ladder.env  lucas_issues.md  real_launch.sh
.cache/clangd/index/: actuator_motors.hpp.E9F82E563810540E.idx  actuator_motors__builder.hpp.5195A2522BC2EB74.idx  actuator_motors__struct.hpp.BBCB1926B7FDDD2D.idx  actuator_motors__traits.hpp.6FB5AA9645B48E09.idx  actuator_motors__type_support.hpp.44C026F86ED3F993.idx  actuator_servos.hpp.E98E262A1A7F6DEC.idx  actuator_servos__builder.hpp.CEB63036DA496FAE.idx  actuator_servos__struct.hpp.346D55B11C6EE07D.idx  actuator_servos__traits.hpp.68A5E2FC78F7B82E.idx  actuator_servos__type_support.hpp.E7973BE1025100E9.idx  airspeed.cpp.BB4F49718D47E896.idx  airspeed.hpp.8EED6E1AE3F1D3FC.idx  airspeed_validated.hpp.D1F26596EBCDFEB6.idx  airspeed_validated__builder.hpp.6C3BD2D3D31C1858.idx  airspeed_validated__struct.hpp.8FF2ABA57C3875F6.idx  airspeed_validated__traits.hpp.16A14E2C0A813B4E.idx  airspeed_validated__type_support.hpp.1FA7DF8FF5074412.idx  angular_velocity.cpp.0EA8C708985E6ACC.idx  angular_velocity.hpp.012FE148A012A2B4.idx  arming_check.cpp.C5044FE870156865.idx  arming_check_reply.hpp.FC2D9B4945C9EFBA.idx  arming_check_reply__builder.hpp.DBBC63D7A97FC94F.idx  arming_check_reply__struct.hpp.7FB9AF338CB10868.idx  arming_check_reply__traits.hpp.FCB7EC9F0434CD41.idx  arming_check_reply__type_support.hpp.DB4A63E81E4CBEFE.idx  arming_check_request.hpp.10E2E53FE0F3295C.idx  arming_check_request__builder.hpp.7E00F682E1879804.idx  arming_check_request__struct.hpp.CAD18C255CD5724D.idx  arming_check_request__traits.hpp.6C9651F889556DA5.idx  arming_check_request__type_support.hpp.B0C7D7DD1A3C3D38.idx  attitude.cpp.A61382023EB56568.idx  attitude.cpp.AA5125867F12EBD4.idx  attitude.hpp.1ACCEAD212D66588.idx  attitude.hpp.36646DA705C5834B.idx  attitude.hpp.7DB9BF4A5AE23568.idx  attitude.hpp.820A5D6D905666DF.idx  config_overrides.hpp.DEE369644B2524BC.idx  config_overrides__builder.hpp.AFFECB050BC20834.idx  config_overrides__struct.hpp.E6A25D160B087A57.idx  config_overrides__traits.hpp.BCDF63BAA62371BD.idx  (+259 more)
config/params/: v1.16.0_arkflow
docker/: Dockerfile  Dockerfile_jacobladder
docker_super/: Dockerfile
docker_super/scripts/: entrypoint.sh
launch_scripts/: approach_aruco.sh  fake_drogue.sh  moving_launch.sh  offboard_blank.sh  precision_land.sh  takeoff_hover.sh  takeoff_hover_land.sh
src/aruco_tracker/cfg/: recorder_params.yaml
src/aruco_tracker/launch/: dualcam_tracker.launch.py
src/drogue_flight/: CMakeLists.txt  DrogueApproach.cpp  DrogueApproach.hpp  package.xml
src/drogue_flight/cfg/: drogue_approach_params.yaml
src/drogue_flight/config/: Drone_Workspace.json
src/drogue_flight/launch/: autonomous_flight.launch.py  autonomous_smooth_flight.launch.py  drogue_approach.launch.py
src/drogue_flight/voxl_offboard_ship_land/: drogue_range_ros_node.py  drone_smooth_planner.py  test.py  voxl_offboard_drogue.py  voxl_offboard_ship_land.py  voxl_offboard_ship_land_agro.py  yolo_drogue_ranging.py
src/precision_land/: BlankMode.cpp  BlankMode.hpp  CMakeLists.txt  FrontApproach.cpp  FrontApproach.hpp  FrontApproachPrecisionLandCombined.cpp  FrontApproachPrecisionLandCombined.hpp  TakeoffHold.cpp  TakeoffHold.hpp  TakeoffLand.cpp  TakeoffLand.hpp  Visualizer.cpp  Visualizer.hpp
src/precision_land/cfg/: drone.rviz  takeoff_hold_params.yaml  takeoff_land_params.yaml
src/precision_land/launch/: blank_mode.launch.py  front_approach.launch.py  front_to_precision_land.launch.py  takeoff_hold.launch.py  takeoff_land.launch.py
src/ros2_yolo_image_processing/: README.md  package.xml  setup.cfg  setup.py
src/ros2_yolo_image_processing/config/: recorder_params.yaml
src/ros2_yolo_image_processing/launch/: multi_node.launch.py
src/ros2_yolo_image_processing/ros2_yolo_image_processing/: drogue_detection_node.py  pose_estimation_node.py
